Dapp works exclusively with video latino tokens now

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Ubuntu:400,700&display=swap" rel="stylesheet">
-    <title>TokenLandia NFT Admin</title>
+    <title>Videolatino Admin</title>
   </head>
   <body>
     <noscript>
